@@ -5,6 +5,9 @@ Copyright (C) 2004-2006 Andrew Zhezherun
 Changes in version 0.4.1 (2006-):
 + Reduced unnecessary redrawing when switching documents.
 + Added autoscroll when selecting text by dragging.
++ Improved entering/exiting fullscreen mode and fixed some problems
+  with fullscreen mode introduced in 0.4.
+* Fixed starting application in maximized state by double-clicking a document.
 * Fixed displaying floating-point numbers in non-English locales.
 
 Changes in version 0.4 (2006-01-18):
